--- a/create_nft_swapx.html
+++ b/create_nft_swapx.html
@@ -1237,7 +1237,10 @@ var display = (async function(){
 	//document.getElementById("contract_token_id").innerHTML = tokenID;
 	//document.write(account_address[0])
 	 }
-	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i+1, address, 0).call();
+	 
+	var contract_length1 = await contract_bal.methods.token_contracts_list2xyCount(i+1, address).call();
+	for (j=0;j<=contract_length;j++){ 
+	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i+1, address, j).call();
 	//document.getElementById("contract_loan").innerHTML = loan_;	
 	//console.log(loan_)
 	var newDiv = document.createElement('div');
@@ -1248,11 +1251,11 @@ var display = (async function(){
 	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
 	
 	//newBtn.id = 'b' + i;
-	newDiv.id = 't'+i;
+	newDiv.id = 't'+i + j;
 	chat.appendChild(newDiv);
 	//chat.appendChild(newBtn);
 	
-	document.getElementById("t" + i).innerHTML = "NFT Contract 2: " + contract_ID2;
+	document.getElementById("t" + i + j).innerHTML = "NFT Contract 2: " + contract_ID2;
 	//<input type="button" value="Lend" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;" onClick="create_obligation()"/>
 	
 	//var term = await contract_bal.methods.loan_term_list(address).call();
@@ -1264,11 +1267,11 @@ var display = (async function(){
 	
 	//document.getElementById("u" + i).innerHTML = "loan due at block " + term;
 	
-	var tokenID2 = await contract_bal.methods.tokens_list2xy(i+1, address, 0).call();
+	var tokenID2 = await contract_bal.methods.tokens_list2xy(i+1, address, j).call();
 	//document.getElementById("loan_obligation").innerHTML = "Loan is already made is " + obligation;
 	//console.log(obligation)
 	var newDiv = document.createElement('div');
-	newDiv.id = 'v'+i;
+	newDiv.id = 'v'+i + j;
 	chat.appendChild(newDiv);
 	
 	
@@ -1277,7 +1280,7 @@ var display = (async function(){
 	var image1 = image_and_name(contract_ID2, tokenID2, getImage);
 	//console.log(image);
 	var newDiv = document.createElement('img');
-	newDiv.id = 'vs'+i;
+	newDiv.id = 'vs'+i + j;
 	
 	//chat.appendChild(newDiv);
 	function getImage(xhttp){
@@ -1301,9 +1304,10 @@ var display = (async function(){
 	
 	
 	
-	document.getElementById("v" + i).innerHTML = "NFT Token ID2: " + tokenID2;
+	document.getElementById("v" + i + j).innerHTML = "NFT Token ID2: " + tokenID2;
 	//var lender = await contract_bal.methods.lender_list(address).call();
 	//console.log(lender)
+	}
 	var latest = await contract_bal.methods.debt_obligation_listx(i+1, address).call();
 	var newDiv = document.createElement('div');
 	newDiv.id = 'w'+i;
